fixed issue of invisible names for agenda points and added IITH specific color coding

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,33 @@ li{
     list-style-type: none;
 }
 
+#navbar{
+    background-color: #f9a61b !important;
+}
+
+#navbar .nav-link{
+    border-radius:10px;
+    margin:0 5px;
+}
+
+#navbar .nav-link:hover{
+    background-color:#f48120 !important;
+}
+
+#navbar .nav-link.active{
+    background-color:#f05a25 !important;
+    
+}
+
+
+#navbar button.logout{
+    background-color:yellow;
+}
+
+#navbar button.logout:hover{
+    box-shadow: 0 5px 5px rgba(0,0,0,0.25), 0 5px 5px rgba(0,0,0,0.22);
+}
+
 .home-cont, .agenda-cont, .sen-dec-cont, .up_hb_cont{
     display:flex;
     flex-direction: row;
@@ -23,6 +50,7 @@ div.left-pane, div.center-pane, div.right-pane{
     padding-top:15px;
     padding-left:40px;
     border-right: 1px black dashed;
+    overflow: scroll;
 }
 
 h5.placeholder-tile{
@@ -87,14 +115,19 @@ form.sen_dec_form>div, form.up_hb_form>div.boxing-div, form.ag_pt_create_form>di
 }
 
 form.sen_dec_form .btn,form.ag_pt_create_form .btn,form.ag_pt_view .btn,form.up_hb_form>div.boxing-div>*, .up_hb_menu>div>.btn{
-    margin: 0 1rem;
+    margin: 1rem 1rem;
 }
 
-.up_hb_menu>div{
+/* .up_hb_menu>div{
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-bottom:3rem;
+} */
+
+
+.up_hb_menu button{
+    margin-bottom:1rem;
 }
 
 form.up_hb_form input, form.sen_dec_form input{
